# Schedule-Editor

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: Logger.h  Sqlmanager.h  WDay.h  WGroup.h  WLesson.h  WMain.h  WSchedule.h  test.h
prototype/: main.py  schedule_parser.py
prototype/schedule_templates/: schedule_template1_colorless.xlsx  schedule_view_template.xlsx
prototype/xlsx_utils/: xlsx_compresser.py  xlsx_extracter.py  xlsx_viewer.py
scheduler/: CMakeLists.txt
scheduler/include/: common.h  group_schedule.h  scheduler.h  xlsx_file.h
scheduler/source/: CMakeLists.txt  group_schedule.cpp  lesson.cpp  schedule_error.cpp  scheduler.cpp  xlsx_file.cpp
source/: Logger.cpp  Sqlmanager.cpp  WDay.cpp  WGroup.cpp  WLesson.cpp  WMain.cpp  WSchedule.cpp  main.cpp
sources/include/: common.h  group_schedule.h  lesson.h  schedule_error.h  schedule_parser.h  schedule_parser.hpp  scheduler.h  xlsx_file.h
sources/scheduler/: CMakeLists.txt
sources/scheduler/include/: scheduler.h
sources/scheduler/source/: group_schedule.cpp  lesson.cpp  scheduler.cpp  xlsx_file.cpp
sources/source/: common.cpp  group_schedule.cpp  main.cpp  scheduler.cpp  xlsx_file.cpp
sources/src/: group_schedule.cpp  lesson.cpp  main.cpp  scheduler.cpp  xlsx_file.cpp
